--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
       href="./public/faviconwatchcharm.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="discription"
+      content="Welcome to our collection of premium watches"
+    />
     <title>Watchcharm</title>
     <link
       rel="stylesheet"
@@ -29,9 +33,8 @@
       <load ="partials/reviews.html" />
       <load ="partials/contact-us.html" />
     </main>
-    <footer>
-      <load ="partials/footer.html" />
-    </footer>
+
+    <load ="partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
