add mob-menu script

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <load ="partials/footer.html" />
-
+    <script src="./mob-menu.js" type="module"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
